--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <footer>
+      Copyright Genome Research Ltd 2022
+    </footer>
   </body>
 </html>
