Implement tabs and paginator with element-plus ui framework

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Longue Vue</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
-    <footer>
-      Copyright Genome Research Ltd 2022
-    </footer>
   </body>
 </html>
